--- a/css/style.css
+++ b/css/style.css
@@ -104,14 +104,32 @@ body {
 }
 
 .veg-click {
-	position:absolute;
-	top:0;
-	right:0;
-	width: 0;
+  position:absolute;
+  top:0;
+  right:0;
+  width: 60px;
+  height: 60px;
+  background: url(../assets/corner.png);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+	/*width: 0;
 	height: 0;
 	border-style: solid;
 	border-width: 0 40px 40px 0;
-	border-color: transparent #fff transparent transparent;
+	border-color: transparent #fff transparent transparent;*/
+}
+
+.veg-click2 {
+  position:absolute;
+  top:0;
+  right:0;
+  width: 60px;
+  height: 60px;
+  background: url(../assets/carrot.png);
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .pk-click {
