--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
 	border-color: #fff transparent transparent transparent;
 }
 
-.suggestion, .foursquare, .veg-click, .pk-click {
+.suggestion, .foursquare, .veg-click, .veg-click2, .pk-click {
 	cursor: pointer;
 }
 
